--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     env_file:
       - .env
     volumes:
-      - /home/mauricio/karatube_songs:/app/project/static/songs
-      - /home/mauricio/karatube_thumbs:/app/project/static/thumbs
-#    ports:
-#      - 5000:5000
+      - /path/to/mp4_videos:/app/project/static/songs
+      - /path/to/videos_thumbnails:/app/project/static/thumbs
+    ports:
+      - 7003:7003
     networks:
       - mauricio
     restart: unless-stopped
