--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,5 @@ pymysql
 requests 
 musicbrainzngs
 qrcode
-Pillow
 youtube-search-python
-google-auth 
-google-auth-httplib2 
-google-auth-oauthlib 
-google-api-python-client
+mailjet_rest
