--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ flask
 flask-login
 flask-sqlalchemy
 Flask-Babel
-yt-dlp
 mysql-connector
 pymysql
 requests 
@@ -10,5 +9,7 @@ musicbrainzngs
 qrcode
 youtube-search-python
 pytz
-pytube
 pytubefix
+free-proxy
+PySocks
+pysocket
